--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,7 +5,12 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 
-# Règle pour les articles : /article/slug-de-l-article
+# Règle pour nos différentes variables get :
+# ?pg=article&slug=slug-de-l-article pourra s'écire /article/slug-de-l-article
 RewriteRule ^([\w-]+)/([\w-]+)/?$ index.php?pg=$1&slug=$2 [QSA,L]
+
+# Ajout pour une seule variable etc...
+# ?pg=connection pourra s'écrire /connection
+RewriteRule ^([\w-]+)/?$ index.php?pg=$1 [QSA,L]
 
 
