--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,10 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 
+# Règle pour les URLs avec 4 variables get :
+# ?pg=article&slug=slug-de-l-article pourra s'écire /article/slug-de-l-article
+RewriteRule ^([\w-]+)/([\w-]+)/([\w-]+)/([\w-]+)/?$ index.php?pg=$1&slug=$2&id=$3&ident=$4 [QSA,L]
+
 # Règle pour les URLs avec 3 variables get :
 # ?pg=article&slug=slug-de-l-article pourra s'écire /article/slug-de-l-article
 RewriteRule ^([\w-]+)/([\w-]+)/([\w-]+)/?$ index.php?pg=$1&slug=$2&id=$3 [QSA,L]
