composer require symfony/mailer

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "twig/twig": "^3.21",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "symfony/mailer": "^7.3"
     }
 }
