--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "require": {
         "twig/twig": "^3.21",
         "ext-pdo": "*",
-        "symfony/mailer": "^7.3"
+        "symfony/mailer": "^7.3",
+        "symfony/mailjet-mailer": "^7.3",
+        "symfony/http-client": "^7.3"
     }
 }
